# uavControl

./: CMakeLists.txt  package.xml
collect_image_data/: CMakeLists.txt  package.xml
collect_image_data/src/: collect_image_data.cpp  collect_image_data.cpp.old.old
src/: online_cnn_recognition.py  uavControl.cpp
src/trained_models/: model_12022018_0001.h5
